<resources>
    <string name="app_name">Parchi</string>
    <string name="name">Name</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="forgot_login_password">Forgot Login Password</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <b>Sign Up</b></string>
    <string name="send_reset">Get Reset Link</string>
    <string name="reset_description">Enter your email and we will send you a link to reset your password :)</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Logout</string>
    <string name="profile_options">Profile Options</string>
    <string name="visit_history">Visit History</string>
    <string name="developers">Follow Developers!</string>
    <string name="github">Github</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="book">Book</string>
    <string name="search">Search</string>
    <string name="app_title">Parchi</string>
    <string name="my_tickets">My Tickets</string>
    <string name="temp_man">Temp Man</string>
    <string name="tempmail_parchi_in">tempmail@parchi.in</string>
    <string name="_8787878787">8787878787</string>
</resources>