<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <item
        android:id="@+id/visit_history"
        android:title="@string/visit_history"
        android:icon="@drawable/ic_baseline_history_24"/>

    <item android:title="@string/profile_options">
        <menu>
            <item
                android:id="@+id/logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_baseline_login_24"/>

        </menu>
    </item>

    <item android:title="@string/developers">
        <menu>
            <item
                android:id="@+id/githubrepo"
                android:title="@string/github"
                android:icon="@drawable/ic_baseline_device_hub_24"/>

        </menu>
    </item>

</menu>