<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.shankarlohar.parchi.fragments.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_book" />

    <fragment
        android:id="@+id/navigation_book"
        android:name="com.shankarlohar.parchi.fragments.BookFragment"
        android:label="@string/book"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_my_tickets"
        android:name="com.shankarlohar.parchi.fragments.MyTicketsFragment"
        android:label="@string/my_tickets"
        tools:layout="@layout/fragment_tickets" />
</navigation>